--- a/index.html
+++ b/index.html
@@ -1,1 +1,224 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aditya Jadhav Portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: "Montserrat", sans-serif;
+        }
+    </style>
+</head>
+<body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+        <a class="navbar-brand" href="#">Aditya Jadhav</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+                <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
+                <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
+                <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="#certifications">Certifications</a></li>
+                <li class="nav-item"><a class="nav-link" href="#achievements">Achievements</a></li>
+                <li class="nav-item"><a class="nav-link" href="#hobbies">Hobbies</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
+<header class="bg-primary text-white text-center py-5">
+    <div class="container">
+        <div class="row mt-5 pb-3">
+            <div class="col-md-6">
+                <h1 class="display-4 mt-4">Welcome to My Portfolio</h1>
+                <p class="lead fs-4 fw-bold">Senior Full Stack Java Developer</p>
+                <p>Email: jadhavadi97@gmail.com | Phone: +91-9623862574</p>
+                <p><a class="text-white" href="https://www.linkedin.com/in/aditya-jadhav-b198a1248" target="_blank">LinkedIn</a> | <a class="text-white" href="https://github.com/adityajadh" target="_blank">GitHub</a></p>
+            </div>
+            <div class="col-md-6">
+                <img src="./aditya.jpg" class="img-fluid w-50 rounded-circle" alt="Aditya Jadhav">
+            </div>
+        </div>
+    </div>
+</header>
+
+<section id="about" class="py-5">
+    <div class="container">
+        <h2 class="text-center">About Me</h2>
+        <p class="text-center">I am Aditya Digambar Jadhav from Ahmednagar, Maharashtra. A passionate Full Stack Java Developer with 2+ years of experience, specializing in Spring Boot, Microservices, Hibernate, and Thymeleaf. My goal is to develop scalable and secure applications that help businesses solve real-world problems.</p>
+    </div>
+</section>
+
+<section id="skills" class="bg-light py-5">
+    <div class="container">
+        <h2 class="text-center">Skills</h2>
+        <div class="row text-center">
+            <div class="col-md-4">
+                <h4>Technical Skills</h4>
+                <p>Java (8/11/17), TypeScript, JavaScript (ES6+), Spring Boot, Hibernate, JWT, Spring Security, Thymeleaf, MySQL, NoSQL, AWS, Apache</p>
+            </div>
+            <div class="col-md-4">
+                <h4>Languages</h4>
+                <p>English, Hindi, Marathi</p>
+            </div>
+            <div class="col-md-4">
+                <h4>Personal Skills</h4>
+                <p>Adaptable, Effective Communicator, Team Player, Analytical Thinker</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="experience" class="py-5">
+    <div class="container">
+        <h2 class="text-center">Experience</h2>
+        <div class="timeline">
+            <div class="timeline-item mb-4">
+                <h4>Senior Full Stack Java Developer</h4>
+                <p><strong>Manasvi Tech Solutions Pvt Ltd</strong> (April 2023 - Present)</p>
+                <ul>
+                    <li>Led backend and frontend for HPCL IN/OUT & Inventory Systems.</li>
+                    <li>Implemented Microservices, RESTful APIs, and deployed on AWS EC2, S3.</li>
+                    <li>Ensured high-availability systems for real-time operations.</li>
+                </ul>
+            </div>
+            <div class="timeline-item mb-4">
+                <h4>Full Stack Developer Intern</h4>
+                <p><strong>Imagin Web Technologies</strong> (Jan 2022 - Jun 2022)</p>
+                <ul>
+                    <li>Developed Agro Price Parser for agricultural data using Django, Python, and MySQL.</li>
+                    <li>Integrated PDF, Mail, and Excel data parsing modules.</li>
+                    <li>Contributed to frontend design using HTML/CSS.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="education" class="bg-light py-5">
+    <div class="container">
+        <h2 class="text-center">Education</h2>
+        <div class="row text-center">
+            <div class="col-md-3">
+                <h4>M.Sc in Computer Science</h4>
+                <p><strong>K. K. Wagh College, Nashik</strong><br>(2022) - 76.85%</p>
+            </div>
+            <div class="col-md-3">
+                <h4>B.Sc in Computer Science</h4>
+                <p><strong>K. J. Somaiya College, Kopargaon</strong><br>(2020) - 65.75%</p>
+            </div>
+            <div class="col-md-3">
+                <h4>HSC</h4>
+                <p><strong>K. B. Rohamare College, Kopargaon</strong><br>(2016) - 42.62%</p>
+            </div>
+            <div class="col-md-3">
+                <h4>SSC</h4>
+                <p><strong>Shree Virabhadra Vidyalaya</strong><br>(2014) - 67.80%</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="projects" class="py-5">
+    <div class="container">
+        <h2 class="text-center">Projects</h2>
+        <div class="row">
+            <div class="col-md-6 mb-4">
+                <h4>HPCL IN/OUT System</h4>
+                <p>Real-time gate entry system using QR/barcode scanning for employees, vehicles, and visitors, enhancing security and traceability.</p>
+            </div>
+            <div class="col-md-6 mb-4">
+                <h4>HPCL Inventory System</h4>
+                <p>Warehouse management system for stock movement, real-time inventory updates, and role-based access for smooth material handling.</p>
+            </div>
+            <div class="col-md-6 mb-4">
+                <h4>Billing Application</h4>
+                <p>A user-friendly application for generating invoices, tracking payments, and automating tax calculations for seamless business transactions.</p>
+            </div>
+            <div class="col-md-6 mb-4">
+                <h4>Visitor Management System (VMS)</h4>
+                <p>A system for visitor check-in/check-out, badge printing, and maintaining secure visitor records integrated with real-time notifications.</p>
+            </div>
+
+            <div class="col-md-6 mb-4">
+                <h4>Agro Price Parser</h4>
+                <p>Web app handling agro price data from PDF, Mail, and Excel parsing.</p>
+                <p>Technologies: Django, Python, MySQL.</p>
+            </div>
+            <div class="col-md-6 mb-4">
+                <h4><a href="https://github.com/adityajadh/Personal-Blog.git" target="_blank">Personal Blog</a></h4>
+                <p>Customizable blogging platform with themes and templates.</p>
+                <p>Technologies: HTML, CSS, JavaScript.</p>
+            </div>
+            <div class="col-md-6 mb-4">
+                <h4>Dindi Portal</h4>
+                <p>Android app for Mandir Trusts to manage Dindi events and participant passes.</p>
+                <p>Technologies: Java, Android SDK.</p>
+            </div>
+            <div class="col-md-6 mb-4">
+                <h4>Dindi Management System</h4>
+                <p>Desktop app for managing Dindi event participants, donations, and expenses.</p>
+                <p>Technologies: Java, Swing.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="certifications" class="bg-light py-5">
+    <div class="container">
+        <h2 class="text-center">Certifications</h2>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">Certified Java Developer - Oracle</li>
+            <li class="list-group-item">Spring Boot Microservices - Udemy</li>
+            <li class="list-group-item">Full Stack Web Development - Coursera</li>
+            <li class="list-group-item">Full Stack Java - Symbiosis Skills & Professional University (SSPU) + Capgemini</li>
+        </ul>
+    </div>
+</section>
+
+<section id="achievements" class="py-5">
+    <div class="container">
+        <h2 class="text-center">Achievements</h2>
+        <ul>
+            <li>Awarded "Employee of the Year" at Manasvi Tech Solutions Pvt Ltd.</li>
+            <li>Ranked Top 5% in HackerRank Coding Challenges.</li>
+            <li>Completed two high-impact government projects under strict deadlines.</li>
+        </ul>
+    </div>
+</section>
+
+<section id="hobbies" class="bg-light py-5">
+    <div class="container">
+        <h2 class="text-center">Hobbies & Interests</h2>
+        <p class="text-center">Playing Kabaddi, Trekking, Coding, Exploring New Technologies.</p>
+    </div>
+</section>
+
+<section id="contact" class="py-5">
+    <div class="container">
+        <h2 class="text-center">Contact Me</h2>
+        <p class="text-center">Email: jadhavadi97@gmail.com | Phone: +91-9623862574</p>
+        <p class="text-center"><a href="https://www.linkedin.com/in/aditya-jadhav-b198a1248" target="_blank">LinkedIn</a></p>
+    </div>
+</section>
+
+<footer class="bg-dark text-white text-center py-3">
+    <div class="container">
+        <p>&copy; 2024 Aditya Jadhav. All Rights Reserved.</p>
+    </div>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
