--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <section id="about" class="py-5">
     <div class="container">
         <h2 class="text-center">About Me</h2>
-        <p class="text-center">I am Aditya Digambar Jadhav from Ahmednagar, Maharashtra. A passionate Full Stack Java Developer with 2+ years of experience, specializing in Spring Boot, Microservices, Hibernate, and Thymeleaf. My goal is to develop scalable and secure applications that help businesses solve real-world problems.</p>
+        <p class="text-center">I am Aditya Digambar Jadhav from Ahilyanagar, Maharashtra. A passionate Full Stack Java Developer with 2+ years of experience, specializing in Spring Boot, Microservices, Hibernate, and Thymeleaf. My goal is to develop scalable and secure applications that help businesses solve real-world problems.</p>
     </div>
 </section>
 
